# learning_logging

./: README.md  pyproject.toml  test.db
app/: crud.py  database.py  main.py
app/core/: logger.py
